# julien-grynberg

./: README.rst  setup.cfg
bcm_backend_interview/: run_bcm_ppp.py
bcm_backend_interview/builders/: barnsley.py  base.py  hawes.py  hounslow.py
bcm_backend_interview/tests/: conftest.py
bcm_backend_interview/tests/builders/: test_barnsley.py  test_hawes.py  test_hounslow.py
bcm_backend_interview/workers/: production_sumer.py
