[metadata]
name = bcm-backend-interview
description = A tool to aggregate power plant production data
long_description = file: README.md

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
install_requires =

[options.extras_require]
test =
    pytest
    pytest-cov
lint =
    black
    flake8
    isort
    mypy

[options.entry_points]
console_scripts =
    bcm_ppp = bcm_backend_interview.run_bcm_ppp:parse_ppp_params

[coverage:run]
branch = True
source = .
omit =
    **/tests/**
    venv/**

[coverage:html]
directory = reports/coverage

[flake8]
exclude = .eggs/*, venv/*
max-line-length = 88
ignore = F821,W503,E501,E203

[mypy]
python_version = 3.6
disallow_untyped_defs = True
ignore_missing_imports = True
warn_unused_configs = True
namespace_packages = True
files = bcm_backend_test

[mypy-mobility.tests.*,api_abstraction.tests.*]
disallow_untyped_defs = False

[isort]
skip = alembic/env.py
skip_glob = alembic/versions/*,venv/**
line_length=88
multi_line_output=3
include_trailing_comma=True
use_parentheses=True
